# torrent_downloader

./: .gitignore  bot.py  downloader.py  magnet_downloader.py  main.py  pyproject.toml  telegram_token.txt
.github/workflows/: pylint.yml
src/torrent_downloader/: bot.py  constants.py  downloader.py  main.py  torrent_downloader.py
